--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -2,13 +2,15 @@
   <h1>Real Time Products</h1>
 
   <form id="formNewProduct">
-    <input type="text" name="title" placeholder="ingrese el titulo" required>
+    <div class="mb-3">
+      <input class="form-label" type="text" name="title" placeholder="ingrese el titulo" required>
+    </div>
     <input type="text" name="description" placeholder="ingrese la descripcion" required>
     <input type="text" name="code" placeholder="ingrese el codigo" required>
     <input type="number" name="price" placeholder="ingrese el precio" required>
     <input type="number" name="stock" placeholder="ingrese el stock" required>
     <input type="text" name="category" placeholder="ingrese la categoria" required>
-
+    <input type="file" name="thumbnail">
     <button type="submit">Enviar</button>
   </form>
 
