--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -3,14 +3,14 @@
 
   <form id="formNewProduct">
     <div class="mb-3">
-      <input class="form-label" type="text" name="title" placeholder="ingrese el titulo" required>
+      <input id="title" class="form-label" type="text" name="title" placeholder="ingrese el titulo" required>
     </div>
-    <input type="text" name="description" placeholder="ingrese la descripcion" required>
-    <input type="text" name="code" placeholder="ingrese el codigo" required>
-    <input type="number" name="price" placeholder="ingrese el precio" required>
-    <input type="number" name="stock" placeholder="ingrese el stock" required>
-    <input type="text" name="category" placeholder="ingrese la categoria" required>
-    <input type="file" name="thumbnail">
+    <input id="description" type="text" name="description" placeholder="ingrese la descripcion" required>
+    <input id="code" type="text" name="code" placeholder="ingrese el codigo" required>
+    <input id="price" type="number" name="price" placeholder="ingrese el precio" required>
+    <input id="stock" type="number" name="stock" placeholder="ingrese el stock" required>
+    <input id="category" type="text" name="category" placeholder="ingrese la categoria" required>
+    <input id="thumbnail" type="file" name="thumbnail">
     <button type="submit">Enviar</button>
   </form>
 
