--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,5 +1,10 @@
 
 <div class="home">
+
+       <div class="cart-actions">
+            <button id="createCartBtn" class="btn btn-success">Crear Carrito</button>
+            <a id="viewCartLink" href="#" class="btn btn-primary" style="display: none;">Ver Carrito</a>
+        </div>
     <h1>Home</h1>
     <h2>Lista de productos</h2>
     <ul>
